# 001-fastapi-pattern

./: .env.example  .gitignore  AUTHENTICATION_FIXED.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SWAGGER_AUTH_GUIDE.md  alembic.ini  create_db.py  pyproject.toml  requirements.txt  run.py  test_setup.py
alembic/: env.py
app/: cli.py  main.py
app/application/: auth_service.py  todo_service.py
app/domain/: entities.py  exceptions.py  repositories.py
app/infrastructure/: database.py  models.py  todo_repository.py  user_repository.py
app/interfaces/: __init__.py  auth_controller.py  schemas.py  todo_controller.py
tests/: test_main.py
